--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # Datasource
-spring.datasource.url=jdbc:mysql://192.168.56.103:3306/users
+spring.datasource.url=jdbc:mysql://localhost/users
 spring.datasource.username=users
 spring.datasource.password=users
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
